--- a/RawToolsViz/App.config
+++ b/RawToolsViz/App.config
@@ -7,7 +7,11 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="OpenMcdf" publicKeyToken="fdbb1629d7c00800" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-2.2.1.4" newVersion="2.2.1.4" />
+        <bindingRedirect oldVersion="0.0.0.0-2.2.1.9" newVersion="2.2.1.9" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="OpenMcdf.Extensions" publicKeyToken="fdbb1629d7c00800" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.3.0.0" newVersion="2.3.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
