--- a/RawToolsGUI/packages.config
+++ b/RawToolsGUI/packages.config
@@ -1,4 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="System.IO.FileSystem.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net461" />
+  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net461" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
+  <package id="ThermoFisher.CommonCore.BackgroundSubtraction" version="5.0.0.7" targetFramework="net461" />
+  <package id="ThermoFisher.CommonCore.Data" version="5.0.0.7" targetFramework="net461" />
+  <package id="ThermoFisher.CommonCore.MassPrecisionEstimator" version="5.0.0.7" targetFramework="net461" />
+  <package id="ThermoFisher.CommonCore.RawFileReader" version="5.0.0.7" targetFramework="net461" />
 </packages>
