--- a/RawTools/packages.config
+++ b/RawTools/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net462" />
   <package id="OpenMcdf" version="2.2.1.9" targetFramework="net462" />
   <package id="OpenMcdf.Extensions" version="2.2.1.4" targetFramework="net462" />
   <package id="Serilog" version="2.7.1" targetFramework="net471" />
