--- a/RawToolsGUI/RawToolsGUI.csproj
+++ b/RawToolsGUI/RawToolsGUI.csproj
@@ -63,19 +63,19 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="ThermoFisher.CommonCore.BackgroundSubtraction, Version=5.0.0.0, Culture=neutral, PublicKeyToken=1aef06afb5abd953">
-      <HintPath>..\packages\ThermoFisher.CommonCore.BackgroundSubtraction.5.0.0.7\lib\netstandard2.0\ThermoFisher.CommonCore.BackgroundSubtraction.dll</HintPath>
+      <HintPath>..\..\ThermoLibs\ThermoFisher.CommonCore.BackgroundSubtraction.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ThermoFisher.CommonCore.Data, Version=5.0.0.0, Culture=neutral, PublicKeyToken=1aef06afb5abd953">
-      <HintPath>..\packages\ThermoFisher.CommonCore.Data.5.0.0.7\lib\netstandard2.0\ThermoFisher.CommonCore.Data.dll</HintPath>
+      <HintPath>..\..\ThermoLibs\ThermoFisher.CommonCore.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ThermoFisher.CommonCore.MassPrecisionEstimator, Version=5.0.0.0, Culture=neutral, PublicKeyToken=1aef06afb5abd953">
-      <HintPath>..\packages\ThermoFisher.CommonCore.MassPrecisionEstimator.5.0.0.7\lib\netstandard2.0\ThermoFisher.CommonCore.MassPrecisionEstimator.dll</HintPath>
+      <HintPath>..\..\ThermoLibs\ThermoFisher.CommonCore.MassPrecisionEstimator.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="ThermoFisher.CommonCore.RawFileReader, Version=5.0.0.0, Culture=neutral, PublicKeyToken=1aef06afb5abd953">
-      <HintPath>..\packages\ThermoFisher.CommonCore.RawFileReader.5.0.0.7\lib\netstandard2.0\ThermoFisher.CommonCore.RawFileReader.dll</HintPath>
+      <HintPath>..\..\ThermoLibs\ThermoFisher.CommonCore.RawFileReader.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
