--- a/RawTools/packages.config
+++ b/RawTools/packages.config
@@ -8,4 +8,8 @@
   <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net462" />
   <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.BackgroundSubtraction" version="5.0.0.7" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.Data" version="5.0.0.7" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.MassPrecisionEstimator" version="5.0.0.7" targetFramework="net462" />
+  <package id="ThermoFisher.CommonCore.RawFileReader" version="5.0.0.7" targetFramework="net462" />
 </packages>
