--- a/RawTools/packages.config
+++ b/RawTools/packages.config
@@ -2,11 +2,13 @@
 <packages>
   <package id="OpenMcdf" version="2.2.1.9" targetFramework="net462" />
   <package id="OpenMcdf.Extensions" version="2.2.1.4" targetFramework="net462" />
-  <package id="Serilog" version="2.7.1" targetFramework="net471" />
-  <package id="Serilog.Sinks.File" version="4.0.0" targetFramework="net462" />
-  <package id="System.IO.FileSystem.AccessControl" version="4.5.0" targetFramework="net462" />
-  <package id="System.Security.AccessControl" version="4.5.0" targetFramework="net462" />
-  <package id="System.Security.Principal.Windows" version="4.5.0" targetFramework="net462" />
+  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net462" />
+  <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net462" />
+  <package id="Serilog" version="2.10.0" targetFramework="net462" />
+  <package id="Serilog.Sinks.File" version="4.1.0" targetFramework="net462" />
+  <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net462" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net462" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
   <package id="ThermoFisher.CommonCore.BackgroundSubtraction" version="5.0.0.7" targetFramework="net462" />
   <package id="ThermoFisher.CommonCore.Data" version="5.0.0.7" targetFramework="net462" />
