--- a/RawToolsViz/packages.config
+++ b/RawToolsViz/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="OpenMcdf" version="2.2.1.9" targetFramework="net462" />
+  <package id="OpenMcdf.Extensions" version="2.2.1.4" targetFramework="net462" />
   <package id="OxyPlot.Core" version="2.0.0" targetFramework="net462" />
   <package id="OxyPlot.WindowsForms" version="2.0.0" targetFramework="net462" />
   <package id="System.IO.FileSystem.AccessControl" version="5.0.0" targetFramework="net462" />
